@@ -73,6 +73,8 @@ Gnobots2:
         - Fix no-moves issue (bug 107846).
         - Since we can't change some settings mid-game an end-game option
           would be good (also for bug 107846).
+        - Keep the preferences dialog open and start a new game. Oops. 
+          Also hiding things is not HIG compliant.
 
 Gnome-stones:
         - Also the joystick tab.
