@@ -2,12 +2,12 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
     "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY legal SYSTEM "legal.xml">
-  <!ENTITY appversion "2.0">
-  <!ENTITY manrevision "2.0">
+  <!ENTITY appversion "2.4">
+  <!ENTITY manrevision "2.4">
   <!ENTITY date "March 2002">
-  <!ENTITY app "<application>GNOME Robots II</application>">
-  <!ENTITY appname "GNOME Robots II">
-  <!ENTITY version "1.2.0"> 
+  <!ENTITY app "<application>GNOME Robots</application>">
+  <!ENTITY appname "GNOME Robots">
+  <!ENTITY version "2.4.0"> 
 ]>
 
 <!-- 
@@ -122,7 +122,7 @@
   </articleinfo>
 
   <indexterm zone="index"> 
-    <primary>GNOME Robots II</primary> 
+    <primary>GNOME Robots</primary> 
   </indexterm>
 
    <!-- ============= Document Body ============================= -->
@@ -132,21 +132,21 @@
      <title>Introduction</title>
 
      <para>
-       <application>GNOME Robots II</application> 
-       is a development of the original GNOME Robots game which
-       was itself based on the text based robots game which can be found
-       on a number of UNIX systems, and comes with the BSD games package on Linux
-       systems.
+       <application>GNOME Robots</application> is a game where you try
+       and avoid a band of marauding robots which are,
+       for no adequately explained reason, trying to kill you. It is
+       based on the text-based robots game which can be found
+       on a number of UNIX and Linux systems.
      </para>
      <para>
-       This new version includes two types of robots, movable junkheaps, 
-       multiple game configurations, user definable keyboard layouts, sound using 
-       ESD if you have it, as well as all of the other features which were present 
-       in the original GNOME Robots game.	
+       This new version includes two types of robots, movable
+       junkheaps, multiple game configurations, user definable
+       keyboard layouts, and sound, as well as all of the features
+       which were present in the original GNOME Robots game.
      </para>
 
      <para>
-       To run <application>GNOME Robots II</application>, select
+       To run <application>GNOME Robots</application>, select
        <menuchoice>
        <guisubmenu>games</guisubmenu>
        <guimenuitem>GNOME Robots</guimenuitem>
@@ -156,15 +156,15 @@
      </para>
 
      <para>
-       <application>GNOME Robots II</application> is included in the
+       <application>GNOME Robots</application> is included in the
        <filename>gnome-games</filename> package, which is part of the
        GNOME desktop environment. This document describes version
-       &version; of <application>GNOME Robots II</application>.
+       &version; of <application>GNOME Robots</application>.
      </para>
    </sect1>
  
    <sect1 id="objective">
-     <title>GNOME Robots II Objective</title>
+     <title>GNOME Robots Objective</title>
      <para>
        The objective of GNOME Robots is quite simple. You are surrounded by a 
        number of robots or other hostile adversaries. As you move about 
@@ -179,19 +179,18 @@
        debris of some other collision. 
      </para>    
 
-     <para> 
-       If supported in the game configuration you have chosen, you can 
-       push the junkheaps around to form barricades to protect you. Also if you are
-       daring enough you can Splat! the robots by pushing junkheaps on top of them
-       for an additional bonus.
-     </para>    
-
+     <para> In some of the game configurations (you can choose from
+       between five different sets of rules), you can push the
+       junkheaps around to form barricades to protect you. Also if you
+       are daring enough you can Splat! the robots by pushing
+       junkheaps on top of them for an additional bonus.  </para>
      <para>
        You can also save yourself by teleporting yourself to a random location. 
        Unfortunately, randomly teleporting means that there is a chance that
        you might end up being right next to a robot so they can kill you when
-       they  make their move. All is not lost however, as you can have a number of
-       safe teleports which will place you out of immediate danger. You can earn
+       they  make their move. All is not lost however, as there are also
+       safe teleports which will place you out of immediate danger, but
+       there are only a limited supply of these. You can earn
        more free teleports as you go along, how you gain them depends on the 
        chosen game, but typically you get one for each robot that is
        destroyed while you are 'waiting', up to a maximum of 10. If you don't
@@ -206,10 +205,9 @@
        as described above.
      </para>
    
-     <para>           
-       If you manage to reach the point where more than half of the screen is
-       occupied by robots, the number of robots will be reset to the starting amount,
-       allowing you to continue.
+     <para> If you manage to reach the point where more than half of
+       the screen is occupied by robots, the number of robots will be
+       reset to the starting amount, allowing you to continue.
      </para>
   </sect1>
 
@@ -218,33 +216,33 @@
   <!-- This section should describe basic usage of the application. -->
 
   <sect1 id="usage">
-    <title>Using GNOME Robots II</title>
+    <title>Using GNOME Robots</title>
     <para>
-      <application>GNOME Robots II</application> is extremely simple to play. 
+      <application>GNOME Robots</application> is extremely simple to play. 
       You make your moves by using your keyboard. You can even decide which 
       keys are used for the moves. 
        This section describes basic usage of
-      <application>GNOME Robots II</application>.
+      <application>GNOME Robots</application>.
     </para>
 
     <!-- ========= Basic Usage =========================== -->
     <sect2 id="mainwin">
       <title>Basic usage</title>
       <para>
-        Starting <application>GNOME Robots II</application> opens the
+        Starting <application>GNOME Robots</application> opens the
         <interface>Main window</interface>, shown in <xref
         linkend="mainwindow-fig"/>. 
 
         <!-- ==== Figure ==== -->
         <figure id="mainwindow-fig">
-	  <title>GNOME Robots II Main Window</title>
+	  <title>GNOME Robots Main Window</title>
 	  <screenshot>
 	  <mediaobject> 
  	   <imageobject>
  	 <imagedata fileref="figures/gnobots2-main.png" format="PNG" srccredit="Patanjali"/>
  	   </imageobject>
  	   <textobject> 
- 	     <phrase>GNOME Robots II Main Window.</phrase> 
+ 	     <phrase>GNOME Robots Main Window.</phrase> 
  	   </textobject> 
  	 </mediaobject>
 	  </screenshot>
@@ -283,7 +281,7 @@
             <menuchoice> 
 	       <shortcut><keysym>Ctrl-N</keysym></shortcut>
                <guimenuitem>New Game</guimenuitem> 
-		  </menuchoice> &mdash; starts a new game of GNOME Robots II.
+		  </menuchoice> &mdash; starts a new game of GNOME Robots.
 	   
             </para>
             </listitem>     
@@ -334,7 +332,7 @@
           <itemizedlist>
           <listitem>
             <para>
-              <guimenuitem>Help</guimenuitem>&mdash;
+              <guimenuitem>Contents</guimenuitem>&mdash;
               shows this manual.
             </para>
           </listitem>
@@ -342,7 +340,7 @@
           <para>
             <guimenuitem>About</guimenuitem>&mdash; shows
               basic information about
-              <application>GNOME Robots II</application>, such as
+              <application>GNOME Robots</application>, such as
               the author's name and the application version number.
           </para>
           </listitem>
@@ -360,7 +358,10 @@
   <sect1 id="keyboard">
     <title>Using the keyboard</title>
     <para>
-    There are three predefined sets of keys for controlling your player. 
+    There are three predefined sets of keys for controlling your
+    player. You can select which set to using the
+    <guimenuitem>Keyboard</guimenuitem> tab in the
+    <guimenuitem>Preferences</guimenuitem> dialog.
     </para>
     <sect2 id="standard-keys">
     <title>
@@ -368,8 +369,9 @@
     </title>
     
     <para>
-      These standard keys are normally used for playing all versions of 
-      the robot games.
+      These keys are the controls used in the original robots
+      game. They will be familiar to people who have played other
+      older text-based games.
     </para>
         <orderedlist>
           <listitem>
@@ -415,11 +417,10 @@
 
   <sect2 id="set2-keys">	
       <title>
-      Set 2 
+      Left Hand Keys 
       </title>
       <para>
-         In Set 2, the keys are laid out on the main part of the keyboard in star shaped
-        pattern for people who don't like the HJKL layout.
+         These keys are laid out on the left hand side of the keyboard.
       </para>
     <orderedlist>
           <listitem><para>
@@ -467,10 +468,11 @@
       
       <sect2 id="set3-keys">     
       <title>
-        Set 3 - Using the Numeric Keypad
+        The Keypad
       </title>
       <para>
-        In Set 3, you use the Numeric Keypad.
+        When you select this set, you use the numeric keypad on the
+        right hand side of the keyboard (not the separate arrow keys).
         <note>
         <title>Switch on the NumLock Key</title>
           <para>
@@ -524,49 +526,52 @@
   
   <sect1 id="customization">
     <title>
-      Customizing GNOME Robots II
+      Customizing GNOME Robots
     </title>
     <para>
       You can modify the behaviour and appearance of
-      the game by selecting the properties dialog by clicking on <guimenuitem>
+      the game by selecting <guimenuitem>
       Preferences</guimenuitem>
-      of <guimenu>Settings</guimenu>. There are three pages to the dialog:-
+      under the <guimenu>Settings</guimenu> menu. This brings up a
+      dialog with three tabs:
       <itemizedlist>
         <listitem>
         <para>
-	    <guimenuitem>Configuration</guimenuitem> &mdash;
-        This page allows you to choose the type of game you want to play.
-        The drop-down box at the top of the page allows you to choos from a number of 
-        predefined games, and the list-box below it shows the settings for that
-        game.
+	    <guimenuitem>Game</guimenuitem> &mdash; This page allows
+        you to choose the type of game you want to play.  The
+        drop-down box at the top of the page allows you to choose from
+        a number of predefined games, and the list-box below it shows
+        the settings for that game. You can't change these options in
+        the middle of a game, so they will be disabled then. There are
+        also several options at the bottom of the dialog:
 	
 	
         <orderedlist>
-          <listitem><para>
-	    The safe moves option will help you to avoid being killed due to a mistake.
-            If you try to make a move that would lead to your death when there is a safe 
-            move available you will not be allowed to procceed. But be warned if there
-            was no safe move available, other than teleporting, the move will be allowed 
-            to proceed.
+          <listitem><para> The safe moves option will help you to
+	    avoid being killed due to a mistake.  If you try to make a
+	    move that would lead to your death when there is a safe
+	    move available you will not be allowed to procceed. But be
+	    warned if there was no safe move available, other than
+	    teleporting, the move will be allowed to proceed.
 	      
           </para></listitem>
           <listitem><para>
 	  
-            There is also a ``super safe mode''.  If you select this, you get
-            beeped when there is no safe move and your only option is to teleport out.
+            There is also a ``super safe mode''.  If you select this,
+            you get beeped when there is no safe move and your only
+            option is to teleport out.
 	  
           </para></listitem>
           <listitem><para>
 	  
-            If you select the sound check-box the game will play sounds for various
-            events throughout the game. If you do not have ESD installed the game will
-            beep using the computer speaker only on invalid moves.
+            If you select the sound check-box the game will play
+            sounds for various events throughout the game.
 	  
           </para></listitem>
           <listitem><para>
            
-	    The 'Splats' checkbox selects whether you want and sound played and a small
-            'Splat!' to appear on the screen.
+	    The 'Splats' checkbox selects whether you want the sound
+            played and a small 'Splat!' to appear on the screen.
 	  
           </para></listitem>
         </orderedlist>
@@ -575,10 +580,10 @@
 	</listitem>
         <listitem>
         <para>
-	    <guimenuitem>Graphics</guimenuitem> &mdash;
-          This page allows you to select the graphics used throughout the game from
-          the list in the dropdown-box. You will get a preview of the graphics 
-          below it.
+	    <guimenuitem>Graphics</guimenuitem> &mdash; This page
+          allows you to select the graphics used throughout the game
+          from the list in the dropdown-box. You can also select the
+          background colour from this tab.
         </para>
         </listitem>
 
@@ -586,11 +591,19 @@
         
         <para>
 	    <guimenuitem>Keyboard</guimenuitem> &mdash;
-          This screen allows you to define your own keyboard controls.
+          This screen allows you to define your own keyboard
+          controls. The three pre-defined sets at the bottom have been
+          described in the previous section. To select a different key
+          for a command, click on the button for that command and then
+          press the key you want to use.
         </para>
         </listitem>
       </itemizedlist>
     </para>
+
+    <para>
+Any changes you make take immediate effect and are automatically saved.
+</para>
 
     <para>
       You can design your own graphics for the game if you want. The graphics
@@ -643,7 +656,7 @@
   <sect1 id="authors">
     <title>Authors</title>
     <para>
-      <application>GNOME Robots II</application> was written by Mark Rae
+      <application>GNOME Robots</application> was written by Mark Rae
       (<email>m.rae@inpharmatica.co.uk</email>). Please send all comments, suggestions, and bug
       reports to the <ulink url="http://bugs.gnome.org" type="http">GNOME
       bug tracking database</ulink>.  (Instructions for submitting bug
